
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int MAP_PRIVATE ;
 int O_RDWR ;
 int PROT_READ ;
 int PROT_WRITE ;
 int close (int) ;
 void* mmap (int ,int,int,int ,int,int ) ;
 int open (char*,int ) ;

void *mymalloc(int n)
{
    int fd;
    void *ret;
    fd = open("/dev/zero", O_RDWR);
    ret = mmap(0, n, PROT_READ|PROT_WRITE, MAP_PRIVATE, fd, 0);
    close(fd);
    return (ret == (void *)-1 ? ((void*)0) : ret);
}
